Fixes #9, slick trick from stackoverflow https://stackoverflow.com/a/14501015/692179

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,8 +6,14 @@ html, body {
   overflow: hidden;
 }
 
+// reference highlighting when modified
 .is-dirty{
 	background-color: #FFEBCD;
+}
+
+// ref list active
+a.active{
+	font-weight: bold;
 }
 
 // fork me button
